--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "npm-sass": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
