--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.1.0",
+    "axios": "^1.7.3",
     "npm-sass": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
