--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.8",
-    "@react-google-maps/api": "^2.19.3",
-    "@vis.gl/react-google-maps": "^1.1.0",
-    "axios": "^1.7.3",
-    "npm-sass": "^3.1.0",
+    "@gsap/react": "^2.1.1",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
